[url] Use uri to url instead